# E0255-CD_MLIR-LLVMPandas

./: .gitignore  CMakeLists.txt  README.md
data/tables_scale_1/: customer.csv  customer.csv-sqlcolinfo  lineitem.csv  lineitem.csv-sqlcolinfo  nation.csv  nation.csv-sqlcolinfo  orders.csv  orders.csv-sqlcolinfo  part.csv  part.csv-sqlcolinfo  partsupp.csv  partsupp.csv-sqlcolinfo  region.csv  region.csv-sqlcolinfo  supplier.csv  supplier.csv-sqlcolinfo
data/testfiles/: llvm-trial.mlir
include/: CMakeLists.txt
include/Pandas/: CMakeLists.txt  PandasDialect.h  PandasDialect.td  PandasOps.h  PandasOps.td  PandasPasses.h  PandasPasses.td  PandasTypes.h  PandasTypes.td
lib/: CMakeLists.txt
lib/DataLib/: CMakeLists.txt
lib/DataLib/include/C/: DataLib.h
lib/DataLib/include/CXX/: DataLib.hpp
lib/DataLib/src/: DataFrame.c  DataFrame.cpp
lib/DataLib/tests/: test_data.csv  test_data.csv-sqlcolinfo  testsC.cpp  testsCXX.cpp
lib/Pandas/: CMakeLists.txt  PandasDialect.cpp  PandasOps.cpp  PandasPasses.cpp  PandasTypes.cpp
pandasmlir-opt/: CMakeLists.txt  pandasmlir-opt.cpp
tests/: cust-q2.mlir  read_csv.mlir
tests/custom-tpch_queries/: cust-q3.mlir  q1.py  q2.py  q3.py
tests/custom-tpch_queries/draft/: cust-q1.mlir  cust-q5.mlir  cust-q6.mlir
tests/results/: cust-q2_mlirresults.csv
